Update CI workflow with all 26 tools and make packages public

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -38,24 +38,58 @@ jobs:
           filters: |
             mcp-common:
               - 'packages/mcp-common/**'
-            nmap:
-              - 'tools/nmap/**'
-            gobuster:
-              - 'tools/gobuster/**'
-            sqlmap:
-              - 'tools/sqlmap/**'
-            nikto:
-              - 'tools/nikto/**'
-            hydra:
-              - 'tools/hydra/**'
+            curl:
+              - 'tools/curl/**'
+            cve-lookup:
+              - 'tools/cve-lookup/**'
+            enum4linux-ng:
+              - 'tools/enum4linux-ng/**'
+            exploit-runner:
+              - 'tools/exploit-runner/**'
             ffuf:
               - 'tools/ffuf/**'
-            whatweb:
-              - 'tools/whatweb/**'
-            linpeas:
-              - 'tools/linpeas/**'
-            winpeas:
-              - 'tools/winpeas/**'
+            ftp:
+              - 'tools/ftp/**'
+            hash-lookup:
+              - 'tools/hash-lookup/**'
+            hydra:
+              - 'tools/hydra/**'
+            john:
+              - 'tools/john/**'
+            lfi-rfi:
+              - 'tools/lfi-rfi/**'
+            metasploit:
+              - 'tools/metasploit/**'
+            mysql:
+              - 'tools/mysql/**'
+            netcat:
+              - 'tools/netcat/**'
+            nikto:
+              - 'tools/nikto/**'
+            nmap:
+              - 'tools/nmap/**'
+            nuclei:
+              - 'tools/nuclei/**'
+            payload:
+              - 'tools/payload/**'
+            privesc:
+              - 'tools/privesc/**'
+            searchsploit:
+              - 'tools/searchsploit/**'
+            sqlite:
+              - 'tools/sqlite/**'
+            sqlmap:
+              - 'tools/sqlmap/**'
+            ssh:
+              - 'tools/ssh/**'
+            tunnel:
+              - 'tools/tunnel/**'
+            web-fingerprint:
+              - 'tools/web-fingerprint/**'
+            web-session:
+              - 'tools/web-session/**'
+            wpscan:
+              - 'tools/wpscan/**'
 
   # Build and push tool images
   build:
@@ -120,6 +154,15 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
+      - name: Make package public
+        if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh api --method PATCH \
+            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
+            -f visibility=public || echo "Could not set visibility (may need admin token)"
+
       - name: Output image info
         if: steps.check.outputs.exists == 'true'
         run: |
@@ -138,7 +181,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [nmap, gobuster, sqlmap, nikto, hydra, ffuf, whatweb, linpeas, winpeas]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mysql, netcat, nikto, nmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan]
 
     permissions:
       contents: read
@@ -189,3 +232,12 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
+      - name: Make package public
+        if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh api --method PATCH \
+            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
+            -f visibility=public || echo "Could not set visibility (may need admin token)"
