Use PACKAGES_TOKEN for setting package visibility

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -162,11 +162,11 @@ jobs:
       - name: Make package public
         if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
         run: |
           gh api --method PATCH \
             /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
-            -f visibility=public || echo "Could not set visibility (may need admin token)"
+            -f visibility=public
 
       - name: Output image info
         if: steps.check.outputs.exists == 'true'
@@ -241,8 +241,8 @@ jobs:
       - name: Make package public
         if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
         env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
         run: |
           gh api --method PATCH \
             /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
-            -f visibility=public || echo "Could not set visibility (may need admin token)"
+            -f visibility=public
