Fix package visibility API endpoint (remove /visibility suffix)

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -165,7 +165,7 @@ jobs:
           GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
         run: |
           gh api --method PATCH \
-            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
+            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }} \
             -f visibility=public
 
       - name: Output image info
@@ -244,5 +244,5 @@ jobs:
           GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
         run: |
           gh api --method PATCH \
-            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }}/visibility \
+            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }} \
             -f visibility=public
