Remove package visibility step (GitHub API limitation for orgs)

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -159,14 +159,9 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Make package public
-        if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
-        env:
-          GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
-        run: |
-          gh api --method PATCH \
-            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }} \
-            -f visibility=public
+      # Note: GitHub API doesn't support changing visibility for org packages
+      # Packages must be made public manually via GitHub UI
+      # See: https://github.com/orgs/community/discussions/55094
 
       - name: Output image info
         if: steps.check.outputs.exists == 'true'
@@ -238,11 +233,6 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-      - name: Make package public
-        if: steps.check.outputs.exists == 'true' && github.event_name != 'pull_request'
-        env:
-          GH_TOKEN: ${{ secrets.PACKAGES_TOKEN }}
-        run: |
-          gh api --method PATCH \
-            /orgs/silicon-works/packages/container/mcp-tools-${{ matrix.tool }} \
-            -f visibility=public
+      # Note: GitHub API doesn't support changing visibility for org packages
+      # Packages must be made public manually via GitHub UI
+      # See: https://github.com/orgs/community/discussions/55094
