feat: add mongodb and nosqlmap MCP tools, update registry with routing metadata

--- a/.github/workflows/build-publish.yaml
+++ b/.github/workflows/build-publish.yaml
@@ -60,6 +60,8 @@ jobs:
               - 'tools/lfi-rfi/**'
             metasploit:
               - 'tools/metasploit/**'
+            mongodb:
+              - 'tools/mongodb/**'
             mysql:
               - 'tools/mysql/**'
             netcat:
@@ -68,6 +70,8 @@ jobs:
               - 'tools/nikto/**'
             nmap:
               - 'tools/nmap/**'
+            nosqlmap:
+              - 'tools/nosqlmap/**'
             nuclei:
               - 'tools/nuclei/**'
             payload:
@@ -181,7 +185,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mysql, netcat, nikto, nmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan]
+        tool: [curl, cve-lookup, enum4linux-ng, exploit-runner, ffuf, ftp, hash-lookup, hydra, john, lfi-rfi, metasploit, mongodb, mysql, netcat, nikto, nmap, nosqlmap, nuclei, payload, privesc, searchsploit, sqlite, sqlmap, ssh, tunnel, web-fingerprint, web-session, wpscan]
 
     permissions:
       contents: read
